# quick_pic

./: .gitignore  CLAUDE.md  README.md  main.py  next_step.md  pyproject.toml  quick_pic.spec
app/core/: exif_reader.py  models.py  scanner.py  thumbnail.py
app/db/: repository.py  schema.sql
app/services/: mark_service.py  move_service.py  session.py
app/ui/: dialogs.py  main_window.py  shortcuts.py  toolbar.py  viewer.py
tests/: conftest.py  test_backend_pipeline.py
