[project]
name = "quick-pic"
version = "0.1.0"
description = "A fast photo culling tool for photographers"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7.0",
    "exifread>=3.0.0",
    "rawpy>=0.22.0",
    "imageio>=2.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
